# opthub-indicator-exe-time-limited-min

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
opthub_indicator_exe_time_limited_min/: exe_time_limited_min.py
opthub_scorer_exe_time_limited_best/: exe_time_limited_best.py
tests/: test_exe_time_limited_best.py  test_exe_time_limited_min.py
