[tool.poetry]
name = "opthub-indicator-exe-time-limited-min"
version = "0.1.0"
description = "An opthub indicator returns minimum objective value until total exe_time exceeds EXE_TIME_LIMIT"
authors = ["Takato Kinoshita <takato@ieee.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TakatoKinoshita/opthub-indicator-exe-time-limited-min"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pyproject-flake8 = "^6.1.0"
mypy = "^1.6.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"

[tool.mypy]
python_version = "3.11"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]
